[package]
name = "openworkers-glue-v8"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "V8 Glue - Rust to V8 binding macros for OpenWorkers"
repository = "https://github.com/openworkers/glue-v8"

[lib]
name = "gv8"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
# V8 engine for integration tests (must match runtime features)
v8 = { package = "openworkers-v8", version = "142.2.2", features = ["v8_enable_pointer_compression"] }
serde_v8 = { package = "openworkers-serde-v8", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
